# wintr

./: .gitignore  .sigilrc  Makefile  configure.ac
src/: Makefile  Makefile.am  buffer.c  debug.sh  flags.c  glconf.c  io.c  line.c  main.c  sig  str.c  term.c  window.c
src/include/: array.h  buffer.h  colors.h  controls-buffer.h  flags.h  glconf.h  io.h  line.h  str.h  term.h  window.h
